@@ -46,7 +46,7 @@ An EdgeX system containing at least a database and the core-data and core-metada
 Note that for this example the logging level is set to WARNING to keep the display clear in normal operation. To display a message on the terminal,
 
 ```
-curl -X PUT -d '{"Message":"Hello World", "Xposition":"35", "Yposition":"12"}' 0:49999/api/v2/device/name/Terminal/WriteMsg
+curl -X PUT -d '{"Message":"Hello World", "Xposition":"35", "Yposition":"12"}' 0:59999/api/v2/device/name/Terminal/WriteMsg
 ```
 
 ### Implementation notes
