@@ -95,6 +95,7 @@ void edgex_metadata_client_add_or_modify_device
   const devsdk_strings * labels,
   edgex_device_adminstate adminstate,
   devsdk_protocols * protocols,
+  edgex_device_autoevents * autos,
   const char * service_name,
   const char * profile_name
 );
